moves line-threshold and extensions to env section in file-length.yml

--- a/.github/workflows/file-length.yml
+++ b/.github/workflows/file-length.yml
@@ -49,5 +49,6 @@ jobs:
           } else {
             console.log(`✅ All files are within the ${threshold}-line limit.`);
           }
-        line-threshold: '300'
-        extensions: '.cs,.js,.ts,.sql'
+      env:
+        LINE_THRESHOLD: '300'
+        EXTENSIONS: '.cs,.js,.ts,.sql'
