fix: wrong language tag

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -42,7 +42,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        language: [actions, c-sharp]
+        language: [actions, csharp]
           
     steps:
     - name: Checkout repository
