try autobuild instead

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -47,16 +47,11 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
-    
-    - name: Setup .NET
-      if: matrix.language == 'csharp'
-      uses: actions/setup-dotnet@v4
-      with:
-        dotnet-version: '10.0.x'
 
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v3
       with:
+        build-mode: autobuild
         languages: ${{ matrix.language }}
         queries: +security-extended
 
