--- a/.github/workflows/file-length.yml
+++ b/.github/workflows/file-length.yml
@@ -8,6 +8,8 @@ on:
 
 jobs:
   check-file-lengths:
+    permissions:
+      contents: read
     runs-on: ubuntu-latest
     name: Check for source files with too many lines
 
