--- a/common-workflow/codeql/workflow.yml
+++ b/common-workflow/codeql/workflow.yml
@@ -1,17 +1,11 @@
 
-name: "CodeQL for Actions and C#"
+name: "CodeQL with Security Extended Queries"
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-  schedule:
-    - cron: '22 21 * * 3'
   workflow_call:
     inputs:
       languages:
-        description: "JSON array of languages"
+        description: "JSON array of languages, if not provided, defaults to ['actions']"
         required: false
         type: string
 
@@ -27,7 +21,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        language: ${{ fromJson(inputs.languages || '["actions","csharp"]') }}
+        language: ${{ fromJson(inputs.languages || '["actions"]') }}
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
