--- a/.github/workflows/codeql-cyclomatic-complexity-csharp.yml
+++ b/.github/workflows/codeql-cyclomatic-complexity-csharp.yml
@@ -27,7 +27,7 @@ jobs:
       with:
         languages: ${{ matrix.language }}
         queries: |
-          ./.github/codeql-queries
+          ./.github/codeql-queries/cyclomatic-complexity.ql
 
     - name: Autobuild
       uses: github/codeql-action/autobuild@v3
